modified login function

--- a/src/main/resources/configfile/config.properties
+++ b/src/main/resources/configfile/config.properties
@@ -2,11 +2,13 @@ Username=
 Password=welcome
 Browser=Chrome
 Website=http://club.insidertravelclub.com
+website.username=testclassic1@yopmail.com
+website.password=Test@1234
 PageLoadTimeOut=240
 ImplcitWait=2
 ExplicitWait=60
 DataBase.Type=Oracle
-DtaBase.ConnectionStr=jdbc:oracle:thin:scott/welcome@localhost:1521
+DataBase.ConnectionStr=jdbc:oracle:thin:scott/welcome@localhost:1521
 mail.smtp.host=smtp.gmail.com
 mail.smtp.ssl.enable=true
 mail.smtp.auth=true
