--- a/src/main/resources/configfile/config.properties
+++ b/src/main/resources/configfile/config.properties
@@ -13,9 +13,9 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.ssl.enable=true
 mail.smtp.auth=true
 mail.smtp.port=465
-email=seemaqaconsultant@gmail.com
-email_pwd=Seema@123
-send_email_to:seemak78@hotmail.com
-SendSearchEmailAfter=13:00:00
+email=ctstravelnotifications@gmail.com
+email_pwd=kpdvjvgpfwnkkshb
+send_email_to:seema@customtravelsolutions.com
+SendSearchEmailAfter=12:45:00
 sqllite.db.location=c:/workspace/CTS_resource/db/CTS_SearchResults.db
 report.location=c:/workspace/CTS_resource/report
