added email to create bug

--- a/src/main/resources/configfile/config.properties
+++ b/src/main/resources/configfile/config.properties
@@ -16,6 +16,6 @@ mail.smtp.port=465
 email=ctstravelnotifications@gmail.com
 email_pwd=kpdvjvgpfwnkkshb
 send_email_to:seema@customtravelsolutions.com
-SendSearchEmailAfter=12:45:00
+email.for.bug:seema@customtravelsolutions.com
 sqllite.db.location=c:/workspace/CTS_resource/db/CTS_SearchResults.db
 report.location=c:/workspace/CTS_resource/report
