<0hotel search changes>

--- a/src/main/resources/configfile/config.properties
+++ b/src/main/resources/configfile/config.properties
@@ -15,7 +15,7 @@ mail.smtp.auth=true
 mail.smtp.port=465
 email=ctstravelnotifications@gmail.com
 email_pwd=kpdvjvgpfwnkkshb
-send_email_to:seema@customtravelsolutions.com
-email.for.bug:seema@customtravelsolutions.com
+send_email_to=seema@customtravelsolutions.com
+email_for_bug=seema@customtravelsolutions.com
 sqllite.db.location=c:/workspace/CTS_resource/db/CTS_SearchResults.db
 report.location=c:/workspace/CTS_resource/report
